Utility to check if `InvocationEvent` is from Swing/AWT