@@ -7,6 +7,11 @@ application {
 	mainClass.set("MainKt")
 }
 
+tasks.withType<JavaExec>().configureEach {
+	/** @see kokoro.internal.ui.Reflect_InvocationEvent */
+	jvmArgs("--add-opens=java.desktop/java.awt.event=ALL-UNNAMED")
+}
+
 dependencies {
 	deps.bundles.testExtras *= {
 		testImplementation(it)
